# DiscordBot

./: CMakeLists.txt
src/: bot.cpp  bot.hpp  main.cpp
src/bot/: bot.hpp
src/login/: login.cpp  login.hpp
